--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,19 +6,16 @@
 </head>
 <body>
         <div>
-            <h1><a href="">Django Girls Blog</a></h1>
+            <h1><a href="https://www.zhihu.com/question/20702054">怎样学习Python</a></h1>
         </div>
+{% for post in  posts %}
+    <div>
+    <h1><a>{{ post.title}}</a> </h1>
+    <p>{{ post.text|linebreaksbr}}</p>
+    <p>Publish: {{ post.published_date}}   Publish by: {{ post.author }}</p>
+    </div>
+{% endfor %}
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="https://baike.baidu.com/item/%E8%A2%AB%E8%A7%A3%E6%95%91%E7%9A%84%E5%A7%9C%E6%88%88/8083416?fr=aladdin&fromid=5772100&fromtitle=django">百度百科关于django</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
 </body>
 </html>
